discussion/kv_engine/162979/162979_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47318: Add DCP Control to configure consumer flow control

Allow the client of the consumer to override the flow control
buffer size which can be used by tests to give greater control
over the flow-control logic.

Change-Id: I5588695c002a739c6d3c33ffb5ec37c3bd8de878

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-10-05 11:42:22.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-05 11:44:26.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40749/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40749/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15593/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23026/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23026/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2759/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2759/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2794/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2794/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13887/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13887/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14739/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14739/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15009/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15009/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13140/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/consumer.cc:1940:16: error: member reference base type "double (double) throw()" is not a structure or union [clang-diagnostic-error]
            log->warn("setting flow control buffer size:", result);
               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13140/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/consumer.cc:1940:16:
error: member reference base type "double (double) throw()" is not a structure or union [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13140/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11927/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
